--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <a href="index.html">Início</a>
     <a href="sobre.html">Sobre</a>
     <a href="contactos.html">Contactos</a>
+    <a href="galeria.html">Galeria</a>
   </nav>
 </header>
 
