aumentar espaço na galeria

--- a/galeria.html
+++ b/galeria.html
@@ -48,6 +48,9 @@
         <img src="images/foto4.jpg" alt="Detalhes rústicos">
         <img src="images/foto5.jpg" alt="Piscina e oliveiras">
         <img src="images/foto6.jpg" alt="Entrada principal">
+        <img src="images/foto7.jpg" alt="Entrada principal">
+        <img src="images/foto8.jpg" alt="Entrada principal">
+        <img src="images/foto9.jpg" alt="Entrada principal">
       </div>
 
       <p style="margin-top:20px; font-size:14px; color:#555;">
