--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
   
 <header class="topbar">
-  <div class="brand"><a href="index.html">Quinta dos Avós Lourenço</a></div>
+  <div class="brand">
+  <a href="index.html">
+    <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+  </a>
+</div>
+
   <nav class="menu">
     <a href="index.html">Início</a>
     <a href="sobre.html">Sobre</a>
