--- a/sobre.html
+++ b/sobre.html
@@ -9,11 +9,18 @@
 <body>
   
 <header class="topbar">
-  <div class="brand"><a href="index.html">Quinta dos Avós Lourenço</a></div>
+  <div class="brand">
+  <a href="index.html">
+    <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+  </a>
+</div>
+
   <nav class="menu">
     <a href="index.html">Início</a>
     <a href="sobre.html">Sobre</a>
+    <a href="galeria.html">Galeria</a>
     <a href="contactos.html">Contactos</a>
+    
   </nav>
 </header>
 
