--- a/galeria.html
+++ b/galeria.html
@@ -26,15 +26,21 @@
   </style>
 </head>
 <body>
-  <header class="topbar">
-    <div class="brand"><a href="index.html">Quinta dos Avós Lourenço</a></div>
-    <nav class="menu">
-      <a href="index.html">Início</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="galeria.html">Galeria</a>
-      <a href="contactos.html">Contactos</a>
-    </nav>
-  </header>
+ <header class="topbar">
+  <div class="brand">
+  <a href="index.html">
+    <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+  </a>
+</div>
+
+  <nav class="menu">
+    <a href="index.html">Início</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="galeria.html">Galeria</a>
+    <a href="contactos.html">Contactos</a>
+    
+  </nav>
+</header>
 
   <main class="section">
     <div class="container">
