--- a/index.html
+++ b/index.html
@@ -57,14 +57,33 @@
   </section>
 
   <section class="section">
-    <div class="container">
-      <h2>Testemunhos</h2>
-      <div class="card">
+  <div class="container">
+    <h2>Testemunhos</h2>
+
+    <div class="testemunhos-slider">
+      <div class="slide active">
         <p><em>“O alojamento é lindo, a localização é perfeita para alguns dias de tranquilidade. Voltarei sempre que puder.”</em></p>
         <p class="note">— Eduardo, Airbnb (junho de 2023)</p>
       </div>
+
+      <div class="slide">
+        <p><em>“A quinta é maravilhosa! Tudo limpo, acolhedor e com uma energia incrível. Recomendo vivamente.”</em></p>
+        <p class="note">— Ana, Booking (agosto de 2024)</p>
+      </div>
+
+      <div class="slide">
+        <p><em>“Ambiente rústico, tranquilo e autêntico. Os anfitriões foram extremamente simpáticos!”</em></p>
+        <p class="note">— João, Google Reviews (abril de 2025)</p>
+      </div>
+
+      <div class="slide">
+        <p><em>“Um refúgio perfeito! Os anfitriões são 5 estrelas e o espaço é encantador.”</em></p>
+        <p class="note">— Marta, Google (setembro de 2024)</p>
+      </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
   
 <footer class="footer">
