--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
         <p><em>“Um refúgio perfeito! Os anfitriões são 5 estrelas e o espaço é encantador.”</em></p>
         <p class="note">— Marta, Google (setembro de 2024)</p>
       </div>
+    <!-- ⭐ bolinhas aparecem aqui -->
+      <div class="dots"></div>
     </div>
   </div>
 </section>
-
+ 
 
   
 <footer class="footer">
