--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
   <meta name="description" content="Alojamento rural na Sertã, refúgio tranquilo desde 1853.">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  
-<header class="topbar">
-  <div class="brand">
-  <a href="index.html">
-    <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
-  </a>
-</div>
+  <!-- Cabeçalho -->
+  <header class="topbar">
+    <div class="brand">
+      <a href="index.html">
+        <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+      </a>
+    </div>
 
-  <nav class="menu">
-    <a href="index.html">Início</a>
-    <a href="sobre.html">Sobre</a>
-    <a href="galeria.html">Galeria</a>
-    <a href="contactos.html">Contactos</a>
-    
-  </nav>
-</header>
+    <nav class="menu">
+      <a href="index.html">Início</a>
+      <a href="sobre.html">Sobre</a>
+      <a href="galeria.html">Galeria</a>
+      <a href="contactos.html">Contactos</a>
+    </nav>
+  </header>
 
+  <!-- Hero -->
   <section class="hero">
     <div class="container">
       <span class="badge">Alojamento Rural</span>
@@ -37,6 +38,7 @@
     </div>
   </section>
 
+  <!-- Destaques -->
   <section class="section">
     <div class="container">
       <div class="grid">
@@ -56,42 +58,44 @@
     </div>
   </section>
 
+  <!-- Testemunhos -->
   <section class="section">
-  <div class="container">
-    <h2>Testemunhos</h2>
+    <div class="container">
+      <h2 class="titulo-testemunhos">Testemunhos</h2>
 
-    <div class="testemunhos-slider">
-      <div class="slide active">
-        <p><em>“O alojamento é lindo, a localização é perfeita para alguns dias de tranquilidade. Voltarei sempre que puder.”</em></p>
-        <p class="note">— Eduardo, Airbnb (junho de 2023)</p>
-      </div>
+      <div class="testemunhos-slider">
+        <div class="slide active">
+          <p><em>“O alojamento é lindo, a localização é perfeita para alguns dias de tranquilidade. Voltarei sempre que puder.”</em></p>
+          <p class="note">— Eduardo, Airbnb (junho de 2023)</p>
+        </div>
 
-      <div class="slide">
-        <p><em>“A quinta é maravilhosa! Tudo limpo, acolhedor e com uma energia incrível. Recomendo vivamente.”</em></p>
-        <p class="note">— Ana, Booking (agosto de 2024)</p>
-      </div>
+        <div class="slide">
+          <p><em>“A quinta é maravilhosa! Tudo limpo, acolhedor e com uma energia incrível. Recomendo vivamente.”</em></p>
+          <p class="note">— Ana, Booking (agosto de 2024)</p>
+        </div>
 
-      <div class="slide">
-        <p><em>“Ambiente rústico, tranquilo e autêntico. Os anfitriões foram extremamente simpáticos!”</em></p>
-        <p class="note">— João, Google Reviews (abril de 2025)</p>
-      </div>
+        <div class="slide">
+          <p><em>“Ambiente rústico, tranquilo e autêntico. Os anfitriões foram extremamente simpáticos!”</em></p>
+          <p class="note">— João, Google Reviews (abril de 2025)</p>
+        </div>
 
-      <div class="slide">
-        <p><em>“Um refúgio perfeito! Os anfitriões são 5 estrelas e o espaço é encantador.”</em></p>
-        <p class="note">— Marta, Google (setembro de 2024)</p>
+        <div class="slide">
+          <p><em>“Um refúgio perfeito! Os anfitriões são 5 estrelas e o espaço é encantador.”</em></p>
+          <p class="note">— Marta, Google (setembro de 2024)</p>
+        </div>
+
+        <!-- Bolinhas de navegação -->
+        <div class="dots"></div>
       </div>
-    <!-- ⭐ bolinhas aparecem aqui -->
-      <div class="dots"></div>
     </div>
-  </div>
-</section>
- 
+  </section>
 
-  
-<footer class="footer">
-  <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
-</footer>
+  <!-- Rodapé -->
+  <footer class="footer">
+    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
+  </footer>
 
+  <!-- JavaScript -->
   <script src="js/app.js"></script>
 </body>
 </html>
