--- a/index.html
+++ b/index.html
@@ -59,32 +59,20 @@
   </section>
 
   <!-- Testemunhos -->
-  <section class="section">
+  <section class="section" id="testemunhos">
     <div class="container">
       <h2 class="titulo-testemunhos">Testemunhos</h2>
 
+      <!-- Badge Airbnb -->
+      <p style="text-align:center; margin-top:-6px;">
+        <a href="https://www.airbnb.pt/rooms/875560493639889462" target="_blank" rel="noopener"
+           style="display:inline-block; padding:6px 10px; border:1px solid #eee; border-radius:999px; font-size:14px; color:#222;">
+          ⭐ 4,96/5 · +50 avaliações · Airbnb
+        </a>
+      </p>
+
+      <!-- Slider de testemunhos (os slides são gerados pelo JS) -->
       <div class="testemunhos-slider">
-        <div class="slide active">
-          <p><em>“O alojamento é lindo, a localização é perfeita para alguns dias de tranquilidade. Voltarei sempre que puder.”</em></p>
-          <p class="note">— Eduardo, Airbnb (junho de 2023)</p>
-        </div>
-
-        <div class="slide">
-          <p><em>“A quinta é maravilhosa! Tudo limpo, acolhedor e com uma energia incrível. Recomendo vivamente.”</em></p>
-          <p class="note">— Ana, Booking (agosto de 2024)</p>
-        </div>
-
-        <div class="slide">
-          <p><em>“Ambiente rústico, tranquilo e autêntico. Os anfitriões foram extremamente simpáticos!”</em></p>
-          <p class="note">— João, Google Reviews (abril de 2025)</p>
-        </div>
-
-        <div class="slide">
-          <p><em>“Um refúgio perfeito! Os anfitriões são 5 estrelas e o espaço é encantador.”</em></p>
-          <p class="note">— Marta, Google (setembro de 2024)</p>
-        </div>
-
-        <!-- Bolinhas de navegação -->
         <div class="dots"></div>
       </div>
     </div>
@@ -96,6 +84,10 @@
   </footer>
 
   <!-- JavaScript -->
+  <script src="js/app.js"></script>
+</body>
+</html>
+
   <script src="js/app.js"></script>
 </body>
 </html>
