--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <a href="sobre.html">Sobre</a>
       <a href="galeria.html">Galeria</a>
       <a href="contactos.html">Contactos</a>
+      <button class="menu-toggle" aria-label="Abrir menu">☰</button>
     </nav>
   </header>
 
