Update index.html ad booking

--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
         </a>
       </p>
 
+      <!-- Badge Booking -->
+    <p style="text-align:center; margin-top:4px;">
+      <a href="https://www.booking.com/searchresults.pt-pt.html?aid=356980&label=gog235jc-10CAsouwFCGHF1aW50YS1kb3MtYXZvcy1sb3VyZW5jb0gfWANouwGIAQGYATO4ARfIAQ_YAQPoAQH4AQGIAgGoAgG4AunxmccGwAIB0gIkZDQ0YmQ2ZTQtOTYzZC00Yjg2LWE0NTYtYmJjZGM2MTkxMmM22AIB4AIB&highlighted_hotels=9947923&redirected=1&city=-2176684&hlrd=user_sh&source=hotel&expand_sb=1&keep_landing=1&sid=64b2f53d8775719eeec102c05b372e62"
+         target="_blank" rel="noopener"
+         style="display:inline-block; padding:6px 10px; border:1px solid #eee; border-radius:999px; font-size:14px; color:#222;">
+         💙 9,8/10 · Booking.com
+      </a>
+    </p>
+
       <!-- Slider de testemunhos (os slides são gerados pelo JS) -->
       <div class="testemunhos-slider">
         <div class="dots"></div>
