--- a/contactos.html
+++ b/contactos.html
@@ -10,36 +10,67 @@
   
 <header class="topbar">
   <div class="brand">
-  <a href="index.html">
-    <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
-  </a>
-</div>
+    <a href="index.html">
+      <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+    </a>
+  </div>
 
-  <nav class="menu">
+  <nav class="menu" aria-label="Navegação principal">
     <a href="index.html">Início</a>
     <a href="sobre.html">Sobre</a>
     <a href="galeria.html">Galeria</a>
-    <a href="contactos.html">Contactos</a>
-    
+    <a href="contactos.html" class="active">Contactos</a>
+    <!-- Se já tens o botão mobile, mantém aqui também -->
+    <!-- <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button> -->
   </nav>
 </header>
 
-  <main class="section">
-    <div class="container">
-      <h1>Contactos</h1>
-      <p>Se tiver alguma questão ou interesse, contacte-nos pelos seguintes meios:</p>
-      <p>Rua Cascalheira Nº371<br>
-6100-421 Azinheira, Sertã<br>
-GPS: <a href="https://maps.app.goo.gl/9ZXXdmu7sS2fHf8T7" target="_blank" rel="noopener">39.738794, -8.107801</a><br>
-Email: <a href="mailto:alquintaavoslourenco@gmail.com">alquintaavoslourenco@gmail.com</a><br>
-Telefone: <a href="tel:+351960446713">+351 960 446 713</a> <span class="note">"Chamada para rede móvel nacional"</span></p>
-      <p><a class="btn" href="https://maps.app.goo.gl/9ZXXdmu7sS2fHf8T7" target="_blank" rel="noopener">Obter direções</a></p>
+<main class="section">
+  <div class="container">
+    <h1>Contactos</h1>
+    <p>Se tiver alguma questão ou interesse, contacte-nos pelos seguintes meios:</p>
+
+    <p>
+      Rua Cascalheira Nº371<br>
+      6100-421 Azinheira, Sertã<br>
+      GPS: <a href="https://maps.app.goo.gl/9ZXXdmu7sS2fHf8T7" target="_blank" rel="noopener">39.738794, -8.107801</a><br>
+      Email: <a href="mailto:alquintaavoslourenco@gmail.com">alquintaavoslourenco@gmail.com</a><br>
+      Telefone: <a href="tel:+351960446713">+351 960 446 713</a>
+      <span class="note">"Chamada para rede móvel nacional"</span>
+    </p>
+
+    <!-- Botões de navegação -->
+    <p style="margin-top:20px;">
+      <!-- Abre a app de navegação preferida (Waze, Apple Maps, Google Maps, etc.) -->
+      <a class="btn primary"
+         href="geo:39.738794,-8.107801?q=Quinta+dos+Av%C3%B3s+Louren%C3%A7o,+Sert%C3%A3,+Portugal"
+         target="_blank" rel="noopener">
+        📍 Obter direções (app)
+      </a>
+
+      <!-- Fallback: abre no navegador (Google Maps) -->
+      <a class="btn"
+         href="https://www.google.com/maps?q=39.738794,-8.107801+(Quinta+dos+Av%C3%B3s+Louren%C3%A7o)"
+         target="_blank" rel="noopener">
+        🌐 Ver no mapa
+      </a>
+    </p>
+
+    <!-- (Opcional) Mapa embutido na página -->
+    <div style="margin-top:30px; text-align:center;">
+      <iframe
+        src="https://www.google.com/maps?q=39.738794,-8.107801&z=15&output=embed"
+        width="100%" height="350" style="border:0; border-radius:10px;" allowfullscreen="" loading="lazy">
+      </iframe>
     </div>
-  </main>
+  </div>
+</main>
   
 <footer class="footer">
   <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
 </footer>
 
+<!-- Se já usas menu mobile ou outros scripts, inclui o app.js -->
+<script src="js/app.js"></script>
 </body>
 </html>
