--- a/contactos.html
+++ b/contactos.html
@@ -5,82 +5,78 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contactos · Quinta dos Avós Lourenço</title>
   <link rel="stylesheet" href="css/style.css">
-  <style>
-    /* --- Mostrar/esconder botões consoante o dispositivo --- */
-    .btn-app { display: none; }         /* escondido no PC */
-    .btn-web { display: inline-block; } /* visível no PC */
-
-    @media (max-width: 768px) {
-      .btn-app { display: inline-block; }  /* visível no telemóvel */
-      .btn-web { display: none; }          /* escondido no telemóvel */
-    }
-  </style>
 </head>
 <body>
   
-<header class="topbar">
-  <div class="brand">
-    <a href="index.html">
-      <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
-    </a>
-  </div>
-
-  <nav class="menu" aria-label="Navegação principal">
-    <a href="index.html">Início</a>
-    <a href="sobre.html">Sobre</a>
-    <a href="galeria.html">Galeria</a>
-    <a href="contactos.html" class="active">Contactos</a>
-  </nav>
-</header>
-
-<main class="section">
-  <div class="container">
-    <h1>Contactos</h1>
-    <p>Se tiver alguma questão ou interesse, contacte-nos pelos seguintes meios:</p>
-
-    <p>
-      Rua Cascalheira Nº371<br>
-      6100-421 Azinheira, Sertã<br>
-      GPS: <a href="https://maps.app.goo.gl/9ZXXdmu7sS2fHf8T7" target="_blank" rel="noopener">39.738794, -8.107801</a><br>
-      Email: <a href="mailto:alquintaavoslourenco@gmail.com">alquintaavoslourenco@gmail.com</a><br>
-      Telefone: <a href="tel:+351960446713">+351 960 446 713</a>
-      <span class="note">"Chamada para rede móvel nacional"</span>
-    </p>
-
-    <!-- Botões de navegação -->
-    <p style="margin-top:20px;">
-      <!-- BOTÃO MOBILE -->
-      <a class="btn primary btn-app"
-         href="geo:39.738794,-8.107801?q=Quinta+dos+Av%C3%B3s+Louren%C3%A7o,+Sert%C3%A3,+Portugal"
-         target="_blank" rel="noopener">
-        📍 Obter direções
+  <!-- CABEÇALHO -->
+  <header class="topbar">
+    <div class="brand">
+      <a href="index.html">
+        <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
       </a>
-
-      <!-- BOTÃO DESKTOP -->
-      <a class="btn btn-web"
-         href="https://www.google.com/maps?q=39.738794,-8.107801+(Quinta+dos+Av%C3%B3s+Louren%C3%A7o)"
-         target="_blank" rel="noopener">
-        🌐 Ver no mapa
-      </a>
-    </p>
-
-    <!-- Mapa embutido -->
-    <div style="margin-top:30px; text-align:center;">
-      <iframe
-        src="https://www.google.com/maps?q=39.738794,-8.107801&z=15&output=embed"
-        width="100%" height="350"
-        style="border:0; border-radius:10px;"
-        allowfullscreen="" loading="lazy">
-      </iframe>
     </div>
-  </div>
-</main>
-  
-<footer class="footer">
-  <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
-</footer>
 
-<script src="js/app.js"></script>
+    <nav class="menu">
+      <a href="index.html">Início</a>
+      <a href="sobre.html">Sobre</a>
+      <a href="galeria.html">Galeria</a>
+      <a href="contactos.html" class="active">Contactos</a>
+    </nav>
+  </header>
+
+  <!-- CONTEÚDO -->
+  <main class="section">
+    <div class="container">
+      <h1>Contactos</h1>
+      <p>Se tiver alguma questão ou interesse, contacte-nos pelos seguintes meios:</p>
+
+      <p>
+        Rua Cascalheira Nº371<br>
+        6100-421 Azinheira, Sertã<br>
+        GPS: <a href="https://maps.app.goo.gl/9ZXXdmu7sS2fHf8T7" target="_blank" rel="noopener">39.738794, -8.107801</a><br>
+        Email: <a href="mailto:alquintaavoslourenco@gmail.com">alquintaavoslourenco@gmail.com</a><br>
+        Telefone: <a href="tel:+351960446713">+351 960 446 713</a>
+        <span class="note">"Chamada para rede móvel nacional"</span>
+      </p>
+
+      <p style="margin-top:20px; display:flex; flex-wrap:wrap; gap:10px; justify-content:center;">
+        <!-- MOBILE -->
+        <a class="btn primary btn-app"
+          href="https://www.google.com/maps/dir/?api=1&destination=39.7387811,-8.107531&travelmode=driving"
+          target="_blank" rel="noopener">
+          📍 Obter direções
+        </a>
+
+        <a class="btn primary btn-app"
+          href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
+          target="_blank" rel="noopener">
+          💬 WhatsApp
+        </a>
+
+        <!-- DESKTOP -->
+        <a class="btn btn-web"
+          href="https://www.google.com/maps/place/Quinta+Dos+Av%C3%B3s+Louren%C3%A7o/@39.7430537,-8.0878088,8020m/data=!3m1!1e3!4m9!3m8!1s0xd1869278e539d21:0xac183f67c1c902d0!5m2!4m1!1i2!8m2!3d39.7387811!4d-8.107531!16s%2Fg%2F11k4jrbxrr?entry=ttu"
+          target="_blank" rel="noopener">
+          🌐 Ver no mapa
+        </a>
+      </p>
+    </div>
+  </main>
+
+  <!-- RODAPÉ -->
+  <footer class="footer">
+    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
+  </footer>
+
+  <!-- BOTÃO FLUTUANTE WHATSAPP -->
+  <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
+     class="whatsapp-float"
+     target="_blank"
+     rel="noopener"
+     aria-label="Enviar mensagem no WhatsApp">
+    <img src="images/whatsapp-icon.svg" alt="WhatsApp" style="width:28px;margin-top:13px;">
+  </a>
+
 </body>
 </html>
 
