--- a/contactos.html
+++ b/contactos.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
   <!-- CABEÇALHO -->
   <header class="topbar">
     <div class="brand">
@@ -16,7 +15,7 @@
       </a>
     </div>
 
-    <nav class="menu">
+    <nav class="menu" aria-label="Navegação principal">
       <a href="index.html">Início</a>
       <a href="sobre.html">Sobre</a>
       <a href="galeria.html">Galeria</a>
@@ -39,27 +38,39 @@
         <span class="note">"Chamada para rede móvel nacional"</span>
       </p>
 
+      <!-- Botões mobile/desktop -->
       <p style="margin-top:20px; display:flex; flex-wrap:wrap; gap:10px; justify-content:center;">
         <!-- MOBILE -->
         <a class="btn primary btn-app"
-          href="https://www.google.com/maps/dir/?api=1&destination=39.7387811,-8.107531&travelmode=driving"
-          target="_blank" rel="noopener">
+           href="https://www.google.com/maps/dir/?api=1&destination=39.7387811,-8.107531&travelmode=driving"
+           target="_blank" rel="noopener">
           📍 Obter direções
         </a>
 
         <a class="btn primary btn-app"
-          href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
-          target="_blank" rel="noopener">
+           href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
+           target="_blank" rel="noopener">
           💬 WhatsApp
         </a>
 
         <!-- DESKTOP -->
         <a class="btn btn-web"
-          href="https://www.google.com/maps/place/Quinta+Dos+Av%C3%B3s+Louren%C3%A7o/@39.7430537,-8.0878088,8020m/data=!3m1!1e3!4m9!3m8!1s0xd1869278e539d21:0xac183f67c1c902d0!5m2!4m1!1i2!8m2!3d39.7387811!4d-8.107531!16s%2Fg%2F11k4jrbxrr?entry=ttu"
-          target="_blank" rel="noopener">
+           href="https://www.google.com/maps/place/Quinta+Dos+Av%C3%B3s+Louren%C3%A7o/@39.7430537,-8.0878088,8020m/data=!3m1!1e3!4m9!3m8!1s0xd1869278e539d21:0xac183f67c1c902d0!5m2!4m1!1i2!8m2!3d39.7387811!4d-8.107531!16s%2Fg%2F11k4jrbxrr?entry=ttu"
+           target="_blank" rel="noopener">
           🌐 Ver no mapa
         </a>
       </p>
+
+      <!-- Mapa embutido -->
+      <div style="margin-top:30px; text-align:center;">
+        <iframe
+          src="https://www.google.com/maps?q=39.7387811,-8.107531&z=15&output=embed"
+          width="100%" height="350"
+          style="border:0; border-radius:10px;"
+          allowfullscreen=""
+          loading="lazy">
+        </iframe>
+      </div>
     </div>
   </main>
 
@@ -68,15 +79,17 @@
     <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
   </footer>
 
-  <!-- BOTÃO FLUTUANTE WHATSAPP -->
+  <!-- BOTÃO FLUTUANTE WHATSAPP (aparece em todas as páginas; adiciona igual nas outras) -->
   <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
      class="whatsapp-float"
      target="_blank"
      rel="noopener"
      aria-label="Enviar mensagem no WhatsApp">
-    <img src="images/whatsapp-icon.svg" alt="WhatsApp" style="width:28px;margin-top:13px;">
+    <img src="images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
+  <!-- Scripts (se usas menu mobile/efeitos noutros ficheiros) -->
+  <script src="js/app.js"></script>
 </body>
 </html>
 
