--- a/galeria.html
+++ b/galeria.html
@@ -7,6 +7,14 @@
   <meta name="description" content="Galeria de imagens da Quinta dos Avós Lourenço, alojamento rural na Sertã.">
   <link rel="stylesheet" href="css/style.css">
 </head>
+<!-- Botão flutuante WhatsApp (pôr em TODAS as páginas, antes de </body>) -->
+<a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
+   class="whatsapp-float"
+   target="_blank"
+   rel="noopener"
+   aria-label="Enviar mensagem no WhatsApp">
+  <img src="images/whatsapp-icon.svg" alt="WhatsApp">
+</a>
 
 <body>
   <!-- Cabeçalho -->
