--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <nav class="menu">
-      <a href="index.html">Início</a>
+      <a href="index.html" class="active">Início</a>
       <a href="sobre.html">Sobre</a>
       <a href="galeria.html">Galeria</a>
       <a href="contactos.html">Contactos</a>
@@ -73,15 +73,15 @@
       </p>
 
       <!-- Badge Booking -->
-    <p style="text-align:center; margin-top:4px;">
-      <a href="https://www.booking.com/searchresults.pt-pt.html?aid=356980&label=gog235jc-10CAsouwFCGHF1aW50YS1kb3MtYXZvcy1sb3VyZW5jb0gfWANouwGIAQGYATO4ARfIAQ_YAQPoAQH4AQGIAgGoAgG4AunxmccGwAIB0gIkZDQ0YmQ2ZTQtOTYzZC00Yjg2LWE0NTYtYmJjZGM2MTkxMmM22AIB4AIB&highlighted_hotels=9947923&redirected=1&city=-2176684&hlrd=user_sh&source=hotel&expand_sb=1&keep_landing=1&sid=64b2f53d8775719eeec102c05b372e62"
-         target="_blank" rel="noopener"
-         style="display:inline-block; padding:6px 10px; border:1px solid #eee; border-radius:999px; font-size:14px; color:#222;">
-         ⭐ <span style="color:#003580;">9,8/10</span> · Booking.com
-      </a>
-    </p>
+      <p style="text-align:center; margin-top:4px;">
+        <a href="https://www.booking.com/searchresults.pt-pt.html?aid=356980&label=gog235jc-10CAsouwFCGHF1aW50YS1kb3MtYXZvcy1sb3VyZW5jb0gfWANouwGIAQGYATO4ARfIAQ_YAQPoAQH4AQGIAgGoAgG4AunxmccGwAIB0gIkZDQ0YmQ2ZTQtOTYzZC00Yjg2LWE0NTYtYmJjZGM2MTkxMmM22AIB4AIB&highlighted_hotels=9947923&redirected=1&city=-2176684&hlrd=user_sh&source=hotel&expand_sb=1&keep_landing=1&sid=64b2f53d8775719eeec102c05b372e62"
+           target="_blank" rel="noopener"
+           style="display:inline-block; padding:6px 10px; border:1px solid #eee; border-radius:999px; font-size:14px; color:#222;">
+          ⭐ <span style="color:#003580;">9,8/10</span> · Booking.com
+        </a>
+      </p>
 
-      <!-- Slider de testemunhos (os slides são gerados pelo JS) -->
+      <!-- Slider de testemunhos -->
       <div class="testemunhos-slider">
         <div class="dots"></div>
       </div>
@@ -93,11 +93,16 @@
     <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
   </footer>
 
-  <!-- JavaScript -->
-  <script src="js/app.js"></script>
-</body>
-</html>
+  <!-- Botão flutuante WhatsApp -->
+  <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
+     class="whatsapp-float"
+     target="_blank"
+     rel="noopener"
+     aria-label="Enviar mensagem no WhatsApp">
+    <img src="images/whatsapp-icon.svg" alt="WhatsApp">
+  </a>
 
+  <!-- JavaScript -->
   <script src="js/app.js"></script>
 </body>
 </html>
