Update index.html update last

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       <a href="sobre.html">Sobre</a>
       <a href="galeria.html">Galeria</a>
       <a href="contactos.html">Contactos</a>
-      <button class="menu-toggle" aria-label="Abrir menu">☰</button>
     </nav>
   </header>
 
@@ -64,7 +63,7 @@
     <div class="container">
       <h2 class="titulo-testemunhos">Testemunhos</h2>
 
-      <!-- Badge Airbnb -->
+      <!-- Avaliações Airbnb -->
       <p style="text-align:center; margin-top:-6px;">
         <a href="https://www.airbnb.pt/rooms/875560493639889462" target="_blank" rel="noopener"
            style="display:inline-block; padding:6px 10px; border:1px solid #eee; border-radius:999px; font-size:14px; color:#222;">
@@ -72,9 +71,9 @@
         </a>
       </p>
 
-      <!-- Badge Booking -->
+      <!-- Avaliações Booking -->
       <p style="text-align:center; margin-top:4px;">
-        <a href="https://www.booking.com/searchresults.pt-pt.html?aid=356980&label=gog235jc-10CAsouwFCGHF1aW50YS1kb3MtYXZvcy1sb3VyZW5jb0gfWANouwGIAQGYATO4ARfIAQ_YAQPoAQH4AQGIAgGoAgG4AunxmccGwAIB0gIkZDQ0YmQ2ZTQtOTYzZC00Yjg2LWE0NTYtYmJjZGM2MTkxMmM22AIB4AIB&highlighted_hotels=9947923&redirected=1&city=-2176684&hlrd=user_sh&source=hotel&expand_sb=1&keep_landing=1&sid=64b2f53d8775719eeec102c05b372e62"
+        <a href="https://www.booking.com/hotel/pt/quinta-dos-avos-lourenco.pt-pt.html"
            target="_blank" rel="noopener"
            style="display:inline-block; padding:6px 10px; border:1px solid #eee; border-radius:999px; font-size:14px; color:#222;">
           ⭐ <span style="color:#003580;">9,8/10</span> · Booking.com
