Update sobre.html last upda

--- a/sobre.html
+++ b/sobre.html
@@ -6,45 +6,62 @@
   <title>Sobre · Quinta dos Avós Lourenço</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  
-<header class="topbar">
-  <div class="brand">
-  <a href="index.html">
-    <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
-  </a>
-</div>
+  <!-- Cabeçalho -->
+  <header class="topbar">
+    <div class="brand">
+      <a href="index.html">
+        <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+      </a>
+    </div>
 
-  <nav class="menu">
-    <a href="index.html">Início</a>
-    <a href="sobre.html">Sobre</a>
-    <a href="galeria.html">Galeria</a>
-    <a href="contactos.html">Contactos</a>
-    
-  </nav>
-</header>
+    <nav class="menu">
+      <a href="index.html">Início</a>
+      <a href="sobre.html" class="active">Sobre</a>
+      <a href="galeria.html">Galeria</a>
+      <a href="contactos.html">Contactos</a>
+    </nav>
+  </header>
 
+  <!-- Conteúdo -->
   <main class="section">
     <div class="container">
       <h1>Sobre a Quinta</h1>
-      <p>A Quinta dos Avós Lourenço não é apenas uma marca registada, mas também uma homenagem viva aos avós Lourenço, cuja memória se mantém viva desde 1853. Enquadrada numa pitoresca paisagem rural, esta propriedade estende-se por 3 hectares e possui uma personalidade distinta.</p>
-      <p>A quinta é adornada com oliveiras cinzentas, equipamentos agrícolas tradicionais e ovelhas pastando, entre outros animais, contribuindo para uma atmosfera única e interativa – uma mistura harmoniosa de fauna e flora que prosperam neste ecossistema. A quinta foi meticulosamente restaurada, combinando toques modernos com características originais que manifestam um charme rústico. No exterior, é pintada em tons de vermelho e branco, e as faces de pedra dão um ar intemporal.</p>
-      <p>No interior, a casa possui uma cozinha totalmente equipada, lavandaria e uma sala de jantar no rés-do-chão. No andar de cima, há dois quartos modernos, cada um com cama de casal, e dois quartos tradicionais com camas de corpo‑e‑meio, todos cheios de luz natural. Além disso, uma moderna casa de banho e uma sala de estar espaçosa e convidativa com um sofá‑cama confortável completam as comodidades.</p>
-      <p>O que diferencia a Quinta dos Avós Lourenço é o compromisso com a sustentabilidade e um turismo responsável. Incentivamos os nossos hóspedes a juntarem-se a nós neste esforço, respeitando as belezas e recursos naturais da região enquanto usufruem de tudo o que a quinta tem para oferecer.</p>
-      <p>Quer esteja à procura de uma escapadela romântica, férias em família ou um retiro tranquilo, a Quinta dos Avós Lourenço é um refúgio rural. Contacte-nos para descobrir o nosso alojamento, comodidades e pacotes especiais e comece a planear as suas férias de sonho no coração de Portugal.</p>
+      <p style="text-align:center; max-width:800px; margin:0 auto;">
+        A <strong>Quinta dos Avós Lourenço</strong> é um alojamento rural com mais de um século de história, 
+        localizado na freguesia de Cernache do Bonjardim, concelho da Sertã.  
+        É o refúgio ideal para quem procura tranquilidade, conforto e um contacto direto com a natureza.
+      </p>
+
+      <p style="text-align:center; max-width:800px; margin:20px auto;">
+        A casa foi cuidadosamente restaurada, mantendo o charme rústico original, 
+        mas adaptando-se às comodidades modernas — oferecendo uma experiência autêntica e acolhedora.
+        Com 3 hectares de oliveiras, animais e trilhos, cada detalhe foi pensado para proporcionar 
+        momentos de descanso e ligação à terra.
+      </p>
+
+      <div style="text-align:center; margin-top:40px;">
+        <img src="images/foto2.jpg" alt="Quinta dos Avós Lourenço" style="max-width:90%; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1);">
+      </div>
     </div>
   </main>
-  
-<footer class="footer">
-  <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
-</footer>
-<!-- Botão flutuante WhatsApp (pôr em TODAS as páginas, antes de </body>) -->
-<a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
-   class="whatsapp-float"
-   target="_blank"
-   rel="noopener"
-   aria-label="Enviar mensagem no WhatsApp">
-  <img src="images/whatsapp-icon.svg" alt="WhatsApp">
-</a>
+
+  <!-- Rodapé -->
+  <footer class="footer">
+    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
+  </footer>
+
+  <!-- Botão flutuante WhatsApp -->
+  <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
+     class="whatsapp-float"
+     target="_blank"
+     rel="noopener"
+     aria-label="Enviar mensagem no WhatsApp">
+    <img src="images/whatsapp-icon.svg" alt="WhatsApp">
+  </a>
+
+  <!-- JavaScript -->
+  <script src="js/app.js"></script>
 </body>
 </html>
