--- a/contactos.html
+++ b/contactos.html
@@ -24,7 +24,6 @@
     </nav>
   </header>
 
-  <!-- Conteúdo -->
   <main class="section">
     <div class="container">
       <h1>Contactos</h1>
@@ -34,52 +33,36 @@
         Rua Cascalheira Nº371<br>
         6100-421 Azinheira, Sertã<br>
         GPS: 
-        <a href="https://www.google.com/maps/place/Quinta+Dos+Av%C3%B3s+Louren%C3%A7o/@39.7430537,-8.0878088,8020m/data=!3m1!1e3!4m9!3m8!1s0xd1869278e539d21:0xac183f67c1c902d0!5m2!4m1!1i2!8m2!3d39.7387811!4d-8.107531!16s%2Fg%2F11k4jrbxrr?entry=ttu"
+        <a href="https://www.google.com/maps/place/Quinta+Dos+Av%C3%B3s+Louren%C3%A7o/@39.7430537,-8.0878088,8020m"
            target="_blank" rel="noopener">39.738794, -8.107801</a><br>
         Email: <a href="mailto:alquintaavoslourenco@gmail.com">alquintaavoslourenco@gmail.com</a><br>
-        Telefone: <a href="tel:+351960446713">+351 960 446 713</a> 
+        Telefone: <a href="tel:+351960446713">+351 960 446 713</a>
         <span class="note">"Chamada para rede móvel nacional"</span>
       </p>
 
-      <!-- Botões de ações -->
       <p style="margin-top:20px; display:flex; flex-wrap:wrap; gap:10px; justify-content:center;">
-
-        <!-- BOTÃO WHATSAPP -->
-        <a class="btn primary btn-app"
+        <a class="btn primary"
           href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
-          target="_blank" rel="noopener">
-          💬 WhatsApp
-        </a>
+          target="_blank" rel="noopener">💬 WhatsApp</a>
 
-        <!-- BOTÃO VER NO MAPA (DESKTOP) -->
-        <a class="btn btn-web"
-          href="https://www.google.com/maps/place/Quinta+Dos+Av%C3%B3s+Louren%C3%A7o/@39.7430537,-8.0878088,8020m/data=!3m1!1e3!4m9!3m8!1s0xd1869278e539d21:0xac183f67c1c902d0!5m2!4m1!1i2!8m2!3d39.7387811!4d-8.107531!16s%2Fg%2F11k4jrbxrr?entry=ttu"
-          target="_blank" rel="noopener">
-          🌐 Ver no mapa
-        </a>
+        <a class="btn"
+          href="https://www.google.com/maps/place/Quinta+Dos+Av%C3%B3s+Louren%C3%A7o/"
+          target="_blank" rel="noopener">🌐 Ver no mapa</a>
 
-        <!-- BOTÃO DIREÇÕES (MOBILE) -->
-        <a class="btn primary btn-app"
+        <a class="btn primary"
           href="https://www.google.com/maps/dir/?api=1&destination=39.7387811,-8.107531&travelmode=driving"
-          target="_blank" rel="noopener">
-          🚗 Obter direções
-        </a>
-
+          target="_blank" rel="noopener">🚗 Obter direções</a>
       </p>
 
-      <!-- Mapa (Google Maps incorporado) -->
       <div style="margin-top:30px; display:flex; justify-content:center;">
         <iframe 
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29912.05533819686!2d-8.107531!3d39.7387811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1869278e539d21%3A0xac183f67c1c902d0!2sQuinta%20Dos%20Av%C3%B3s%20Louren%C3%A7o!5e0!3m2!1spt-PT!2spt!4v1696862400000!5m2!1spt-PT!2spt"
           width="100%" height="400" style="border:0; border-radius:10px; max-width:900px;" allowfullscreen=""
-          loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+          loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-
     </div>
   </main>
 
-  <!-- Rodapé -->
   <footer class="footer">
     <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
   </footer>
@@ -93,9 +76,6 @@
     <img src="images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
-  <!-- JavaScript -->
   <script src="js/app.js"></script>
 </body>
 </html>
-
-
