--- a/galeria.html
+++ b/galeria.html
@@ -4,17 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Galeria · Quinta dos Avós Lourenço</title>
-  <meta name="description" content="Galeria de imagens da Quinta dos Avós Lourenço, alojamento rural na Sertã.">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<!-- Botão flutuante WhatsApp (pôr em TODAS as páginas, antes de </body>) -->
-<a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
-   class="whatsapp-float"
-   target="_blank"
-   rel="noopener"
-   aria-label="Enviar mensagem no WhatsApp">
-  <img src="images/whatsapp-icon.svg" alt="WhatsApp">
-</a>
 
 <body>
   <!-- Cabeçalho -->
@@ -33,10 +24,10 @@
     </nav>
   </header>
 
-  <!-- Galeria -->
+  <!-- Conteúdo -->
   <main class="section">
     <div class="container">
-      <h1 style="text-align:center; margin-bottom: 10px;">Galeria</h1>
+      <h1>Galeria</h1>
       <p style="text-align:center;">Alguns momentos e detalhes da Quinta dos Avós Lourenço:</p>
 
       <div class="gallery">
@@ -46,9 +37,9 @@
         <img src="images/foto4.jpg" alt="Detalhes rústicos">
         <img src="images/foto5.jpg" alt="Piscina e oliveiras">
         <img src="images/foto6.jpg" alt="Entrada principal">
-        <img src="images/foto7.jpg" alt="Sala rústica">
-        <img src="images/foto8.jpg" alt="Pormenores interiores">
-        <img src="images/foto9.jpg" alt="Varanda e vista">
+        <img src="images/foto7.jpg" alt="Animais da quinta">
+        <img src="images/foto8.jpg" alt="Pôr do sol na quinta">
+        <img src="images/foto9.jpg" alt="Vista panorâmica">
       </div>
     </div>
   </main>
@@ -57,6 +48,15 @@
   <footer class="footer">
     <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
   </footer>
+
+  <!-- Botão flutuante WhatsApp -->
+  <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
+     class="whatsapp-float"
+     target="_blank"
+     rel="noopener"
+     aria-label="Enviar mensagem no WhatsApp">
+    <img src="images/whatsapp-icon.svg" alt="WhatsApp">
+  </a>
 
   <!-- JavaScript -->
   <script src="js/app.js"></script>
