--- a/contactos.html
+++ b/contactos.html
@@ -6,9 +6,9 @@
   <title>Contactos · Quinta dos Avós Lourenço</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-  <!-- Cabeçalho -->
+  
+  <!-- CABEÇALHO -->
   <header class="topbar">
     <div class="brand">
       <a href="index.html">
@@ -24,6 +24,7 @@
     </nav>
   </header>
 
+  <!-- CONTEÚDO -->
   <main class="section">
     <div class="container">
       <h1>Contactos</h1>
@@ -32,42 +33,37 @@
       <p>
         Rua Cascalheira Nº371<br>
         6100-421 Azinheira, Sertã<br>
-        GPS: 
-        <a href="https://www.google.com/maps/place/Quinta+Dos+Av%C3%B3s+Louren%C3%A7o/@39.7430537,-8.0878088,8020m"
-           target="_blank" rel="noopener">39.738794, -8.107801</a><br>
+        GPS: <a href="https://maps.app.goo.gl/9ZXXdmu7sS2fHf8T7" target="_blank" rel="noopener">39.738794, -8.107801</a><br>
         Email: <a href="mailto:alquintaavoslourenco@gmail.com">alquintaavoslourenco@gmail.com</a><br>
         Telefone: <a href="tel:+351960446713">+351 960 446 713</a>
         <span class="note">"Chamada para rede móvel nacional"</span>
       </p>
 
+      <!-- BOTÃO DIREÇÕES (apenas mobile) -->
       <p style="margin-top:20px; display:flex; flex-wrap:wrap; gap:10px; justify-content:center;">
-        <a class="btn primary"
-          href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
-          target="_blank" rel="noopener">💬 WhatsApp</a>
-
-        <a class="btn"
-          href="https://www.google.com/maps/place/Quinta+Dos+Av%C3%B3s+Louren%C3%A7o/"
-          target="_blank" rel="noopener">🌐 Ver no mapa</a>
-
-        <a class="btn primary"
+        <a class="btn primary btn-app"
           href="https://www.google.com/maps/dir/?api=1&destination=39.7387811,-8.107531&travelmode=driving"
-          target="_blank" rel="noopener">🚗 Obter direções</a>
+          target="_blank" rel="noopener">
+          📍 Obter direções
+        </a>
       </p>
 
-      <div style="margin-top:30px; display:flex; justify-content:center;">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29912.05533819686!2d-8.107531!3d39.7387811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1869278e539d21%3A0xac183f67c1c902d0!2sQuinta%20Dos%20Av%C3%B3s%20Louren%C3%A7o!5e0!3m2!1spt-PT!2spt!4v1696862400000!5m2!1spt-PT!2spt"
-          width="100%" height="400" style="border:0; border-radius:10px; max-width:900px;" allowfullscreen=""
-          loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <!-- MAPA (só visível em desktop) -->
+      <div style="margin-top:30px;">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15997.905355419148!2d-8.107531!3d39.7387811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1869278e539d21%3A0xac183f67c1c902d0!2sQuinta%20Dos%20Av%C3%B3s%20Louren%C3%A7o!5e1!3m2!1spt-PT!2spt!4v1700000000000"
+          width="600" height="450" style="border:0;" allowfullscreen loading="lazy">
+        </iframe>
       </div>
     </div>
   </main>
 
+  <!-- RODAPÉ -->
   <footer class="footer">
     <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
   </footer>
 
-  <!-- Botão flutuante WhatsApp -->
+  <!-- BOTÃO FLUTUANTE WHATSAPP (presente em todas as páginas) -->
   <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
      class="whatsapp-float"
      target="_blank"
@@ -75,6 +71,11 @@
      aria-label="Enviar mensagem no WhatsApp">
     <img src="images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
+
+  <!-- JAVASCRIPT -->
+  <script src="js/app.js"></script>
+</body>
+</html>
 
   <script src="js/app.js"></script>
 </body>
