--- a/sobre.html
+++ b/sobre.html
@@ -26,24 +26,34 @@
 
   <!-- Conteúdo -->
   <main class="section">
-    <div class="container">
-      <h1>Sobre a Quinta</h1>
-      <p style="text-align:center; max-width:800px; margin:0 auto;">
+    <div class="container" style="max-width:800px; text-align:center;">
+      <h1>Sobre a Quinta dos Avós Lourenço</h1>
+
+      <p>
         A <strong>Quinta dos Avós Lourenço</strong> é um alojamento rural com mais de um século de história, 
         localizado na freguesia de Cernache do Bonjardim, concelho da Sertã.  
         É o refúgio ideal para quem procura tranquilidade, conforto e um contacto direto com a natureza.
       </p>
 
-      <p style="text-align:center; max-width:800px; margin:20px auto;">
-        A casa foi cuidadosamente restaurada, mantendo o charme rústico original, 
+      <p>
+        A casa foi cuidadosamente restaurada, preservando o charme rústico original, 
         mas adaptando-se às comodidades modernas — oferecendo uma experiência autêntica e acolhedora.
-        Com 3 hectares de oliveiras, animais e trilhos, cada detalhe foi pensado para proporcionar 
-        momentos de descanso e ligação à terra.
       </p>
 
-      <div style="text-align:center; margin-top:40px;">
-        <img src="images/foto2.jpg" alt="Quinta dos Avós Lourenço" style="max-width:90%; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.1);">
-      </div>
+      <p>
+        Rodeada por três hectares de oliveiras, árvores de fruto, animais e trilhos naturais, 
+        a Quinta proporciona uma imersão completa na vida rural, com a serenidade e o encanto de outros tempos.
+      </p>
+
+      <p>
+        O espaço é ideal para famílias, casais e amantes da natureza que procuram descansar, 
+        reconectar-se e desfrutar do silêncio e da paisagem da Beira Interior.
+      </p>
+
+      <p>
+        Mais do que um alojamento, a Quinta dos Avós Lourenço é um lugar de memórias, 
+        partilhas e histórias — onde cada recanto reflete o carinho e a dedicação de gerações.
+      </p>
     </div>
   </main>
 
@@ -65,3 +75,4 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
