--- a/sobre.html
+++ b/sobre.html
@@ -31,7 +31,7 @@
 
       <p>
         A <strong>Quinta dos Avós Lourenço</strong> é um alojamento rural com mais de um século de história, 
-        localizado na freguesia de Cernache do Bonjardim, concelho da Sertã.  
+        localizado no concelho da Sertã.  
         É o refúgio ideal para quem procura tranquilidade, conforto e um contacto direto com a natureza.
       </p>
 
