--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
       </a>
     </div>
 
-    <nav class="menu">
-      <a href="index.html" class="active">Início</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="galeria.html">Galeria</a>
-      <a href="contactos.html">Contactos</a>
-    </nav>
+   <nav class="menu" aria-label="Navegação principal">
+  <a href="index.html">Início</a>
+  <a href="sobre.html">Sobre</a>
+  <a href="galeria.html">Galeria</a>
+  <a href="contactos.html">Contactos</a>
+
+  <!-- Botão hambúrguer (aparece só em ecrãs pequenos) -->
+  <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
+</nav>
+
   </header>
 
   <!-- Hero -->
