--- a/index.html
+++ b/index.html
@@ -11,23 +11,22 @@
 <body>
   <!-- Cabeçalho -->
   <header class="topbar">
-    <div class="brand">
-      <a href="index.html">
-        <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
-      </a>
-    </div>
+  <div class="brand">
+    <a href="index.html">
+      <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+    </a>
+  </div>
 
-   <nav class="menu" aria-label="Navegação principal">
-  <a href="index.html">Início</a>
-  <a href="sobre.html">Sobre</a>
-  <a href="galeria.html">Galeria</a>
-  <a href="contactos.html">Contactos</a>
-
-  <!-- Botão hambúrguer (aparece só em ecrãs pequenos) -->
+  <!-- Botão hambúrguer (fora da nav) -->
   <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
-</nav>
 
-  </header>
+  <nav class="menu" aria-label="Navegação principal">
+    <a href="index.html">Início</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="galeria.html">Galeria</a>
+    <a href="contactos.html">Contactos</a>
+  </nav>
+</header>
 
   <!-- Hero -->
   <section class="hero">
