--- a/galeria.html
+++ b/galeria.html
@@ -9,20 +9,23 @@
 
 <body>
   <!-- Cabeçalho -->
-  <header class="topbar">
-    <div class="brand">
-      <a href="index.html">
-        <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
-      </a>
-    </div>
+ <header class="topbar">
+  <div class="brand">
+    <a href="index.html">
+      <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+    </a>
+  </div>
 
-    <nav class="menu">
-      <a href="index.html">Início</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="galeria.html" class="active">Galeria</a>
-      <a href="contactos.html">Contactos</a>
-    </nav>
-  </header>
+  <!-- Botão hambúrguer (fora da nav) -->
+  <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
+
+  <nav class="menu" aria-label="Navegação principal">
+    <a href="index.html">Início</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="galeria.html">Galeria</a>
+    <a href="contactos.html">Contactos</a>
+  </nav>
+</header>
 
   <!-- Conteúdo -->
   <main class="section">
