--- a/contactos.html
+++ b/contactos.html
@@ -10,19 +10,22 @@
   
   <!-- CABEÇALHO -->
   <header class="topbar">
-    <div class="brand">
-      <a href="index.html">
-        <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
-      </a>
-    </div>
+  <div class="brand">
+    <a href="index.html">
+      <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+    </a>
+  </div>
 
-    <nav class="menu">
-      <a href="index.html">Início</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="galeria.html">Galeria</a>
-      <a href="contactos.html" class="active">Contactos</a>
-    </nav>
-  </header>
+  <!-- Botão hambúrguer (fora da nav) -->
+  <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
+
+  <nav class="menu" aria-label="Navegação principal">
+    <a href="index.html">Início</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="galeria.html">Galeria</a>
+    <a href="contactos.html">Contactos</a>
+  </nav>
+</header>
 
   <!-- CONTEÚDO -->
   <main class="section">
