--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@
 
   <!-- Rodapé -->
   <footer class="footer">
-    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
-  </footer>
+  <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · 
+     <a href="politica-privacidade.html">Política de Privacidade</a>
+  </p>
+</footer>
+
 
   <!-- WhatsApp flutuante -->
   <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
