--- a/politica-privacidade.html
+++ b/politica-privacidade.html
@@ -92,7 +92,7 @@
 
     <h2>7. Os seus direitos</h2>
     <p>Ao abrigo do RGPD, tem os direitos de <strong>acesso</strong>, <strong>retificação</strong>, <strong>eliminação</strong>, <strong>limitação</strong>, <strong>oposição</strong> e <strong>portabilidade</strong> (quando aplicável). Também pode retirar o consentimento quando o tratamento se basear nele.</p>
-    <p>Para exercer os seus direitos, contacte: <a href="mailto:SEU_EMAIL">SEU_EMAIL</a>. Tem ainda o direito de apresentar reclamação à <a href="https://www.cnpd.pt/" target="_blank" rel="noopener noreferrer">CNPD</a>.</p>
+    <p>Para exercer os seus direitos, contacte: <a href="mailto:SEU_EMAIL">SEU_</a>. Tem ainda o direito de apresentar reclamação à <a href="https://www.cnpd.pt/" target="_blank" rel="noopener noreferrer">CNPD</a>.</p>
 
     <h2>8. Segurança</h2>
     <p>Aplicamos medidas técnicas e organizativas adequadas para proteger os dados pessoais, incluindo utilização de HTTPS, políticas de segurança no navegador (CSP) e princípio da minimização de dados.</p>
